# Lane-and-Object-Detection

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .markdownlint.yml  .yamllint.yml  CMakeLists.txt  Doxyfile  PSScriptAnalyzerSettings.psd1  README.md  cspell.yml  log.txt  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: Build.yml  ContinuousDeployment.yml  ContinuousIntegration.yml  PerformanceTests.yml  Release.yml  cmake.yml
docs/: README.md
docs/custom/: header.html
docs/html/: _frame_builder_8cpp_source.html  _frame_builder_8hpp_source.html  _globals_8hpp_source.html  _information_8hpp_source.html  _lane_detector_8cpp.html  _lane_detector_8cpp_source.html  _lane_detector_8hpp.html  _lane_detector_8hpp.js  _lane_detector_8hpp_source.html  _object_detector_8cpp.html  _object_detector_8cpp_source.html  _object_detector_8hpp.html  _object_detector_8hpp.js  _object_detector_8hpp_source.html  _performance_8cpp.html  _performance_8cpp_source.html  _performance_8hpp.html  _performance_8hpp.js  _performance_8hpp_source.html  _performance_test_8hpp_source.html  _performance_tests_8cpp.html  _performance_tests_8cpp_source.html  _performance_tests_8hpp.html  _performance_tests_8hpp.js  _performance_tests_8hpp_source.html  _rolling_average_8cpp.html  _rolling_average_8hpp.html  _rolling_average_8hpp.js  _rolling_average_8hpp_source.html  _video_manager_8cpp.html  _video_manager_8cpp_source.html  _video_manager_8hpp.html  _video_manager_8hpp.js  _video_manager_8hpp_source.html  annotated.html  annotated_dup.js  class_lane_and_object_detection_1_1_frame_builder-members.html  class_lane_and_object_detection_1_1_frame_builder.html  class_lane_and_object_detection_1_1_frame_builder.js  class_lane_and_object_detection_1_1_globals_1_1_exceptions_1_1_not_implemented_error.html  (+102 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enums_1.js  enums_2.js  files_0.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  (+31 more)
include/: pch.hpp
include/detectors/: LaneDetector.hpp  ObjectDetector.hpp
include/helpers/: Enumerations.hpp  Exceptions.hpp  FrameBuilder.hpp  Globals.hpp  Information.hpp  Performance.hpp  PerformanceTest.hpp  PerformanceTests.hpp  RollingAverage.hpp  VideoManager.hpp
modules/: Build.psd1  Build.psm1
resources/: README.md
resources/icons/: LaneAndObjectDetection.rc
source/: main.cpp
source/detectors/: LaneDetector.cpp  ObjectDetector.cpp
source/helpers/: FrameBuilder.cpp  Performance.cpp  PerformanceTests.cpp  RollingAverage.cpp  VideoManager.cpp
tests/: README.md  graphs.py  main.cpp  main.py
tests/jetson_nano/: no_yolov4.txt  yolov4-tiny_288_cuda.txt  yolov4-tiny_320_cuda.txt  yolov4-tiny_416_cuda.txt  yolov4-tiny_512_cuda.txt  yolov4-tiny_608_cuda.txt  yolov4_288_cuda.txt  yolov4_320_cuda  yolov4_416_cuda.txt  yolov4_512_cuda  yolov4_608_cuda.txt
tests/output/: ubuntu_20.04.db  windows_10.db
tests/performance_graphs/: performance_graphs.py  test-graphs.py  test-sqlite.py
tests/performance_tests/: PerformanceTests.cpp  PerformanceTests.hpp
tests/ubuntu_desktop/: no_yolov4.txt  yolov4-tiny_288.txt  yolov4-tiny_288_cuda.txt  yolov4-tiny_320.txt  yolov4-tiny_320_cuda.txt  yolov4-tiny_416.txt  yolov4-tiny_416_cuda.txt  yolov4-tiny_512.txt  yolov4-tiny_512_cuda.txt  yolov4-tiny_608  yolov4-tiny_608_cuda.txt  yolov4_288.txt  yolov4_288_cuda.txt  yolov4_320.txt  yolov4_320_cuda  yolov4_416  yolov4_416_cuda.txt  yolov4_512.txt  yolov4_512_cuda.txt  yolov4_608  yolov4_608_cuda
tests/windows_desktop/: no_yolov4.txt  yolov4-tiny_288.txt  yolov4-tiny_288_cuda  yolov4-tiny_320.txt  yolov4-tiny_320_cuda.txt  yolov4-tiny_416  yolov4-tiny_416_cuda.txt  yolov4-tiny_512  yolov4-tiny_512_cuda.txt  yolov4-tiny_608  yolov4-tiny_608_cuda.txt  yolov4_288  yolov4_288_cuda.txt  yolov4_320.txt  yolov4_320_cuda  yolov4_416.txt  yolov4_416_cuda.txt  yolov4_512  yolov4_512_cuda.txt  yolov4_608.txt  yolov4_608_cuda.txt
